<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="440dp"
    android:layout_gravity="center"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="25dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/left_arrow"
            android:src="@drawable/left_arrow"
            android:layout_gravity="start"/>

        <TextView
            android:id="@+id/recoverPasswordTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bold"
            android:layout_marginTop="15dp"
            android:text="@string/forgot_your_password"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/recoverPasswordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/light"
            android:text="@string/recover_password_text"
            android:textColor="@color/gray"
            android:textSize="18sp"
            android:textAlignment="center"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmailRecover"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/input_field"
            android:ems="10"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/light"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:textColor="@color/gray"
            android:textColorHint="@color/gray"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/advertisementText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/light"
            android:text="@string/default_advertisement"
            android:textColor="@color/red"
            android:layout_marginTop="3dp"
            android:textSize="14sp"
            android:visibility="invisible"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/resetPasswordButton"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:background="@color/red"
            android:fontFamily="@font/regular"
            android:text="@string/reset_password"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:cornerRadius="50sp"/>

        <TextView
            android:id="@+id/dontRemeberEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bold"
            android:text="@string/don_t_remember_your_email_address"
            android:textColor="@color/gray"
            android:textSize="14sp"
            android:layout_marginTop="24dp"
            android:layout_gravity="start"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/registerRecover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bold"
                android:text="@string/register"
                android:textColor="@color/red"
                android:textSize="14sp"
                android:layout_gravity="start"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:id="@+id/registerTextRecover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:text="@string/for_a_new_account"
                android:textColor="@color/gray"
                android:textSize="14sp"
                android:layout_gravity="start"/>

        </LinearLayout>

    </LinearLayout>


</com.google.android.material.card.MaterialCardView>